# pinyin

./: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  ibus-pinyin.spec.in
data/: Makefile.am  Makefile.in  ibus-setup-bopomofo.desktop.in.in  ibus-setup-pinyin.desktop.in.in
data/db/: Makefile.am  Makefile.in
data/db/english/: Makefile.am  Makefile.in
data/icons/: Makefile.in
lua/: Makefile.am  Makefile.in  lmyoslib.c  lua-ext-console.c  lua-plugin-init.c  lua-plugin.c  lua-plugin.h  test-lua-plugin.c
m4/: Makefile.am  Makefile.in
po/: POTFILES.in  POTFILES.skip
setup/: Makefile.am  Makefile.in  ibus-setup-pinyin.in  version.py.in
src/: Makefile.am  Makefile.in  PYBopomofoEditor.cc  PYBopomofoEditor.h  PYBopomofoEngine.cc  PYBopomofoEngine.h  PYBus.h  PYConfig.cc  PYConfig.h  PYDoublePinyinEditor.cc  PYDoublePinyinEditor.h  PYDynamicSpecialPhrase.cc  PYDynamicSpecialPhrase.h  PYEditor.cc  PYEditor.h  PYEngine.cc  PYEngine.h  PYEnglishEditor.cc  PYEnglishEditor.h  PYExtEditor.cc  PYExtEditor.h  PYFallbackEditor.cc  PYFallbackEditor.h  PYFullPinyinEditor.cc  PYFullPinyinEditor.h  PYHalfFullConverter.cc  PYHalfFullConverter.h  PYLookupTable.h  PYMain.cc  PYObject.h  PYPhoneticEditor.cc  PYPhoneticEditor.h  PYPinyinEditor.cc  PYPinyinEditor.h  PYPinyinEngine.cc  PYPinyinEngine.h  PYPinyinObserver.cc  PYPinyinObserver.h  PYPinyinProperties.cc  PYPinyinProperties.h  (+13 more)
